--- a/public/css/master.css
+++ b/public/css/master.css
@@ -7676,29 +7676,40 @@ input[type="color"]:focus,
   vertical-align: middle !important;
 }
 /*
-/////////////////////////////////////////////////////// Forums /////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////// Glow /////////////////////////////////////////////////////////
 */
-div.labels {
+div.list-glow-sm div.list-glow-labels:first-child {
+  margin-left: 5px !important;
+}
+div.list-glow-sm ul.list-glow-group li div.list-glow-group-item {
+  padding: 5px 0 5px 0px !important;
+}
+div.list-glow div.list-glow-labels,
+div.list-glow-sm div.list-glow-labels {
+  font-weight: bold;
+}
+div.list-glow div.list-glow-labels:after,
+div.list-glow-sm div.list-glow-labels:after,
+div.list-glow div.list-glow-labels:before,
+div.list-glow-sm div.list-glow-labels:before {
+  content: " ";
+  display: table;
+}
+div.list-glow div.list-glow-labels:after,
+div.list-glow-sm div.list-glow-labels:after {
+  clear: both;
+}
+div.list-glow div.list-glow-labels:first-child,
+div.list-glow-sm div.list-glow-labels:first-child {
   margin-left: 25px;
-  display: block;
 }
-div.labels div {
-  display: block;
+div.list-glow ul.no-header li:first-child div,
+div.list-glow-sm ul.no-header li:first-child div {
+  border-top: 0 !important;
+  margin-top: -1px;
 }
-div.labels div.subject {
-  width: 60%;
-  display: block;
-  float: left;
-}
-div.labels div.replies {
-  width: 15%;
-  float: left;
-}
-div.labels div.lastPost {
-  width: 25%;
-  float: left;
-}
-ul.forum {
+div.list-glow ul.list-glow-group,
+div.list-glow-sm ul.list-glow-group {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -7711,7 +7722,8 @@ ul.forum {
   vertical-align: baseline;
   display: block;
 }
-ul.forum li {
+div.list-glow ul.list-glow-group li,
+div.list-glow-sm ul.list-glow-group li {
   position: relative;
   height: auto;
   padding: 0;
@@ -7724,11 +7736,30 @@ ul.forum li {
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
 }
-ul.forum li:hover {
+div.list-glow ul.list-glow-group li.active div.list-glow-group-item > div > .badge,
+div.list-glow-sm ul.list-glow-group li.active div.list-glow-group-item > div > .badge {
+  background: #96dde7;
+  box-shadow: 0 0 40px #96dde7;
+}
+div.list-glow ul.list-glow-group li a.block,
+div.list-glow-sm ul.list-glow-group li a.block {
+  display: block;
+  text-decoration: none;
+}
+div.list-glow ul.list-glow-group li:last-of-type,
+div.list-glow-sm ul.list-glow-group li:last-of-type {
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-bottom-left-radius: 4px;
+}
+div.list-glow ul.list-glow-group li:hover,
+div.list-glow-sm ul.list-glow-group li:hover {
   background: rgba(52, 56, 56, 0.4);
 }
-ul.forum li.announcement:before,
-ul.forum li.wontFix:before {
+div.list-glow ul.list-glow-group li.announcement:before,
+div.list-glow-sm ul.list-glow-group li.announcement:before,
+div.list-glow ul.list-glow-group li.wontFix:before,
+div.list-glow-sm ul.list-glow-group li.wontFix:before {
   content: '';
   background: #f15f5c !important;
   position: absolute;
@@ -7738,8 +7769,10 @@ ul.forum li.wontFix:before {
   height: 100%;
   box-shadow: 0 0 40px #f15f5c !important;
 }
-ul.forum li.sticky:before,
-ul.forum li.inProgress:before {
+div.list-glow ul.list-glow-group li.sticky:before,
+div.list-glow-sm ul.list-glow-group li.sticky:before,
+div.list-glow ul.list-glow-group li.inProgress:before,
+div.list-glow-sm ul.list-glow-group li.inProgress:before {
   content: '';
   background: #f4c26b !important;
   position: absolute;
@@ -7749,8 +7782,10 @@ ul.forum li.inProgress:before {
   height: 100%;
   box-shadow: 0 0 40px #f4c26b !important;
 }
-ul.forum li.application:before,
-ul.forum li.open:before {
+div.list-glow ul.list-glow-group li.application:before,
+div.list-glow-sm ul.list-glow-group li.application:before,
+div.list-glow ul.list-glow-group li.open:before,
+div.list-glow-sm ul.list-glow-group li.open:before {
   content: '';
   background: #3fb9f5 !important;
   position: absolute;
@@ -7760,7 +7795,10 @@ ul.forum li.open:before {
   height: 100%;
   box-shadow: 0 0 40px #3fb9f5 !important;
 }
-ul.forum li.resolved:before {
+div.list-glow ul.list-glow-group li.resolved:before,
+div.list-glow-sm ul.list-glow-group li.resolved:before,
+div.list-glow ul.list-glow-group li.online:before,
+div.list-glow-sm ul.list-glow-group li.online:before {
   content: '';
   background: #7ef57e !important;
   position: absolute;
@@ -7770,8 +7808,10 @@ ul.forum li.resolved:before {
   height: 100%;
   box-shadow: 0 0 40px #7ef57e !important;
 }
-ul.forum li.unread:before,
-ul.forum li:hover:before {
+div.list-glow ul.list-glow-group li.unread:before,
+div.list-glow-sm ul.list-glow-group li.unread:before,
+div.list-glow ul.list-glow-group li.active:before,
+div.list-glow-sm ul.list-glow-group li.active:before {
   content: '';
   background: #96dde7;
   position: absolute;
@@ -7781,34 +7821,49 @@ ul.forum li:hover:before {
   height: 100%;
   box-shadow: 0 0 40px #96dde7;
 }
-ul.forum li div {
-  display: block;
+div.list-glow ul.list-glow-group li:hover:before,
+div.list-glow-sm ul.list-glow-group li:hover:before {
+  content: '';
+  background: #96dde7 !important;
+  position: absolute;
+  top: 0;
+  left: -6px;
+  width: 6px;
+  height: 100%;
+  box-shadow: 0 0 40px #96dde7 !important;
 }
-ul.forum li div div:first-of-type {
-  border-top: 0;
-}
-ul.forum li div.post {
+div.list-glow ul.list-glow-group li div.list-glow-group-item,
+div.list-glow-sm ul.list-glow-group li div.list-glow-group-item {
   padding: 13px 0 13px 20px;
   width: 100%;
   height: auto!important;
   border-top: 1px solid #4d5252;
 }
-ul.forum li div.subject {
-  width: 60%;
-  display: block;
-  float: left;
-  vertical-align: middle;
-  height: 100%;
+div.list-glow ul.list-glow-group li div.list-glow-group-item:after,
+div.list-glow-sm ul.list-glow-group li div.list-glow-group-item:after,
+div.list-glow ul.list-glow-group li div.list-glow-group-item:before,
+div.list-glow-sm ul.list-glow-group li div.list-glow-group-item:before {
+  content: " ";
+  display: table;
 }
-ul.forum li div.replies {
-  width: 15%;
-  float: left;
+div.list-glow ul.list-glow-group li div.list-glow-group-item:after,
+div.list-glow-sm ul.list-glow-group li div.list-glow-group-item:after {
+  clear: both;
 }
-ul.forum li div.lastPost {
-  width: 25%;
-  float: left;
+div.list-glow ul.list-glow-group li div.list-glow-group-item > div > .badge,
+div.list-glow-sm ul.list-glow-group li div.list-glow-group-item > div > .badge {
+  float: right;
 }
-.trans-03s {
+div.list-glow ul.list-glow-group li div.list-glow-group-item > div > .badge + .badge,
+div.list-glow-sm ul.list-glow-group li div.list-glow-group-item > div > .badge + .badge {
+  margin-right: 5px;
+}
+div.list-glow ul.list-glow-group li div.list-glow-group-item-sm,
+div.list-glow-sm ul.list-glow-group li div.list-glow-group-item-sm {
+  padding: 5px 0 5px 0px;
+}
+div.list-glow .trans-03s,
+div.list-glow-sm .trans-03s {
   transition-duration: 0.3s;
   -moz-transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
